[tool.poetry]
name = "nldiff"
version = "0.1.1"
description = "Netlist Diff Tool"
authors = ["Mohamed Gaber <donn@efabless.com>"]
license = "Apache-2.0" 
readme = "Readme.md"
packages = [{ include = "nldiff" }]
classifiers = [
    "Programming Language:: Python:: 3",
    "Intended Audience:: Developers",
    "Operating System:: POSIX:: Linux",
    "Operating System:: MacOS:: MacOS X",
]

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0,<9"
pyverilog = "*"


[tool.poetry.group.dev.dependencies]
wheel = "*"
black = ">=24.4.0,<25"
flake8 = "*"

[tool.poetry.scripts]
nldiff = "nldiff.__main__:diff_cmd"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
